--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -8,3 +8,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.text-outline {
+  -webkit-text-stroke: 2px black;
+  color: white;
+}
